--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,9 +1,14 @@
-<h1 class="text-3xl text-red-500">{{ title() }}</h1>
+<div class="card bg-base-100 w-1/2 mx-auto p-10 mt-10 shadow-xl">
+  <h3 class="text-3xl text-red-500">{{ title() }}</h3>
 
-<ul>
-  @for (member of members(); track member.id) {
-    <li>{{member.id}} - {{member.displayName}}</li>
-  }
-</ul>
-
-<button class="btn btn-primary">Primary</button>
+  <ul class="list">
+    @for (member of members(); track member.id) {
+      <li class="list-row items-center">
+        <img class="size-12 rounded-full" src="/user.png" alt="">
+        <div>
+          {{member.displayName}}
+        </div>
+      </li>
+    }
+  </ul>
+</div>
